infra-helm/network/tailscale/tailscale-service-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd
  namespace: argocd
  annotations:
    tailscale.com/hostname: "argocd"
spec:
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
  type: LoadBalancer
  loadBalancerClass: tailscale
---
