infra-helm/network/tailscale/tailscale-ingress-app.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: argocd
#   namespace: argocd
#   annotations:
#     tailscale.com/hostname: "argocd"
# spec:
#   selector:
#     app.kubernetes.io/name: argocd-server
#     app.kubernetes.io/instance: argocd
#   ports:
#   - name: http
#     protocol: TCP
#     port: 80
#     targetPort: 8080
#   - name: https
#     protocol: TCP
#     port: 443
#     targetPort: 8080
#   type: LoadBalancer
#   loadBalancerClass: tailscale
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailnet-ingress
  namespace: argocd
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: https
  ingressClassName: tailscale
